--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,17 +1,82 @@
-<footer id="footer" class="bg-dark text-white pt-4">
-  <div class="container d-flex justify-content-center">
-    <a
-      *ngFor="let link of socialLinks"
-      class="btn btn-outline-light rounded-circle m-2"
-      [href]="link.url"
-      target="_blank"
-      [title]="link.name"
-      [ngStyle]="{ '--hover-color': link.hoverColor }"
-    >
-      <i [class]="link.iconClass" style="font-size: 1.5rem"></i>
-    </a>
-  </div>
-  <div class="footer-content text-center text-white mt-4">
-    <p>&copy; {{ currentYear }} All rights reserved.</p>
+<footer id="footer" class="footer-section">
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-main">
+        <div class="footer-brand">
+          <h3>Rama Koti Reddy Yerram</h3>
+          <p>Full Stack Developer & Angular Specialist</p>
+          <p>
+            Passionate about creating beautiful, functional, and user-friendly
+            web applications.
+          </p>
+        </div>
+
+        <div class="footer-links">
+          <div class="link-group">
+            <h4>Navigation</h4>
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#experience">Experience</a></li>
+            </ul>
+          </div>
+
+          <div class="link-group">
+            <h4>Portfolio</h4>
+            <ul>
+              <li><a href="#education">Education</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#certifications">Certifications</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+
+          <div class="link-group">
+            <h4>Connect</h4>
+            <ul>
+              <li><a href="mailto:rama7993&#64;gmail.com">Email</a></li>
+              <li><a href="tel:+919876543210">Phone</a></li>
+              <li>
+                <a href="https://github.com/rama7993" target="_blank">GitHub</a>
+              </li>
+              <li>
+                <a href="https://linkedin.com/in/rama7993" target="_blank"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-social">
+        <div class="social-links">
+          <a
+            *ngFor="let link of socialLinks"
+            [href]="link.url"
+            target="_blank"
+            [title]="link.name"
+            class="social-link"
+            [ngStyle]="{ '--hover-color': link.hoverColor }"
+          >
+            <i [class]="link.iconClass"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="footer-copyright">
+          <p>
+            &copy; {{ currentYear }} Rama Koti Reddy Yerram. All rights
+            reserved.
+          </p>
+          <p>
+            Built with <i class="pi pi-heart" style="color: #e74c3c"></i> using
+            Angular
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
